# gapid

./: .classpath  .project  BUILD.bazel
cmake/Modules/: UseProtoc.cmake
cmd/gapit/: BUILD.bazel  flags.go  screenshot.go  trace.go
cmd/perfetto/: BUILD.bazel  main.go
core/gles/atrace_layer/apk/: BUILD.bazel
core/gles/atrace_layer/cc/: BUILD.bazel
core/gles/timer_layer/apk/: BUILD.bazel
core/gles/timer_layer/cc/: BUILD.bazel  gl_timer_layer.exports  timer_layer.cpp
core/os/android/: device.go  layers.go
core/vulkan/vk_timing/apk/: BUILD.bazel
core/vulkan/vk_timing/cc/: BUILD.bazel  TimingLayer.json  layer.cpp  layer.h  producer.cpp  producer.h  producer_android.exports  producer_api.cpp  threading.h  timing.cpp  timing.h  timing_android.exports  timing_desktop.exports
gapic/: BUILD.bazel
gapic/src/cc/: BUILD.bazel  skia.cpp
gapic/src/main/com/google/gapid/: GraphicsTraceView.java  Main.java  MainWindow.java  PerfettoTraceView.java
gapic/src/main/com/google/gapid/models/: Analytics.java  Perfetto.java
gapic/src/main/com/google/gapid/perfetto/: QueryViewer.java  TraceView.java
gapic/src/main/com/google/gapid/perfetto/base/: BinarySearch.java  Logging.java  Remote.java
gapic/src/main/com/google/gapid/perfetto/common/: Actions.java  Engine.java  Protos.java  QueryResponse.java  Registry.java  State.java  TimeSpan.java
gapic/src/main/com/google/gapid/perfetto/controller/: AppController.java  Controller.java  ControllerGlobals.java  QueryController.java  TraceController.java  TrackController.java
gapic/src/main/com/google/gapid/perfetto/frontend/: Button.java  Checkerboard.java  ColorCache.java  FrontEnd.java  FrontEndGlobals.java  FrontendLocalState.java  GridLines.java  LinePanel.java  OldRenderContext.java  OverviewTimelinePanel.java  Panel.java  PanelCanvas.java  QuantizedLoad.java  RenderContext.java  RunningStatistics.java  ThreadDesc.java  TimeAxisPanel.java  TimeScale.java  TitlePanel.java  Track.java  TrackGroupPanel.java  TrackPanel.java  Tracks.java  ViewerPage.java
gapic/src/main/com/google/gapid/perfetto/models/: CounterTrack.java  ThreadTrack.java  Tracks.java
gapic/src/main/com/google/gapid/perfetto/tracks/: ChromeSlices.java  Colors.java  Counter.java  CpuFrequency.java  CpuSlices.java  ProcessSummary.java
gapic/src/main/com/google/gapid/perfetto/views/: GpuQueuePanel.java  State.java  StyleConstants.java  ThreadPanel.java  TrackContainer.java
gapic/src/main/com/google/gapid/skia/: Path.java  RenderContext.java  Skia.java  SkiaCanvas.java
gapic/src/main/com/google/gapid/util/: Colors.java  Paths.java
gapic/src/main/com/google/gapid/views/: PerfettoView.java  TracerDialog.java
gapic/src/main/com/google/gapid/widgets/: Theme.java  Widgets.java
gapic/src/platform/linux/com/google/gapid/glcanvas/: GlCanvas.java
gapic/src/platform/osx/com/google/gapid/glcanvas/: GlCanvas.java
gapic/src/platform/windows/com/google/gapid/glcanvas/: GlCanvas.java
gapidapk/: deviceinfo.go  gapidapk.go  packageinfo.go
gapidapk/android/apk/: AndroidManifest.xml.in  BUILD.bazel
gapidapk/android/app/src/main/java/com/google/android/gapid/: DeviceInfoActivity.java  DeviceInfoService.java  PackageInfoActivity.java  PackageInfoService.java
gapii/cc/: gapii_android.exports  setup_chain.cpp
gapii/client/: adb.go
gapir/cc/: interpreter.cpp  interpreter.h
gapis/api/gles/: compat.go
gapis/api/gles/templates/: BUILD.bazel  atrace_layer.cpp.tmpl
gapis/api/templates/: vulkan_gfx_api_extras.tmpl
gapis/api/vulkan/: BUILD.bazel  replay.go
gapis/capture/: capture.go  graphics.go  perfetto.go
gapis/perfetto/: BUILD.bazel  processor.go  trace.go
gapis/perfetto/android/: BUILD.bazel  trace.go
gapis/perfetto/cc/: processor.cpp  processor.h
gapis/resolve/: BUILD.bazel  perfetto.go  resolvables.proto  resolve.go
gapis/server/: grpc.go  server.go
gapis/service/: service.proto
gapis/service/path/: BUILD.bazel  path.go  path.proto  validate.go
gapis/trace/: trace.go
gapis/trace/android/: BUILD.bazel  trace.go
gapis/trace/desktop/: trace.go
gapis/trace/tracer/: default_api_trace_options.go
test/robot/replay/: client.go
test/robot/trace/: client.go
