# Copyright (C) 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//tools/build:rules.bzl", "android_dynamic_library", "apic_template", "cc_copts")

apic_template(
    name = "gles_templated",
    api = "//gapis/api/gles:api",
    templates = [
        "//gapis/api/gles/templates:atrace_layer.cpp",
        "//gapis/api/templates:api_types.h",
    ],
)

cc_library(
    name = "cc",
    srcs = [":gles_templated"],
    copts = cc_copts(),
    linkopts = [
        "-landroid",
        "-llog",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core/cc",
        "//gapil/runtime/cc",
    ],
)

android_dynamic_library(
    name = "libGLATraceLayer",
    visibility = ["//visibility:public"],
    exports = "gl_atrace_layer.exports",
    deps = [":cc"],
)
