# Copyright (C) 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//tools/build:rules.bzl", "android_dynamic_library", "cc_copts")

cc_library(
    name = "layer",
    srcs = [
        "layer.cpp",
        "layer.h",
        "producer.h",
        "producer_api.cpp",
        "threading.h",
        "timing.cpp",
        "timing.h",
    ],
    copts = cc_copts() + select({
        "//tools/build:linux": ["-DVK_USE_PLATFORM_XCB_KHR"],
        "//tools/build:darwin": [],
        "//tools/build:windows": ["-DVK_USE_PLATFORM_WIN32_KHR"],
        # Android
        "//conditions:default": ["-DVK_USE_PLATFORM_ANDROID_KHR"],
    }) + [
        "-fno-rtti",
        "-fno-exceptions",
    ],
    linkopts = [
        "-ldl",
        "-llog",
        "-lm",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core/cc",
        "//core/vulkan/cc/include/vulkan",
    ],
)

cc_library(
    name = "producer",
    srcs = [
        "producer.cpp",
    ],
    copts = cc_copts() + [
        "-fno-rtti",
        "-fno-exceptions",
        # We always build Perfetto in optimized mode, but a lot of its headers
        # actually respect this.
        "-DNDEBUG",
    ],
    linkopts = [
        "-landroid",
        "-llog",
        "-lm",
    ],
    deps = [
        "//core/cc",
        "@perfetto//:producer",
    ],
)

android_dynamic_library(
    name = "libVkLayer_Timing",
    visibility = ["//visibility:public"],
    exports = "timing_android.exports",
    deps = [":layer"],
)

android_dynamic_library(
    name = "libproducer",
    visibility = ["//visibility:public"],
    exports = "producer_android.exports",
    deps = [":producer"],
)

filegroup(
    name = "json",
    srcs = ["TimingLayer.json"],
    visibility = ["//visibility:public"],
)
